# vibe-dating-backend

./: .bashrc  .cursorrules  .gitattributes  README.md  __init__.py  cloudfront-params-fixed.json  context.md  debug_user.json  pyproject.toml  user.json
.claude/: settings.local.json
docs/: README.md  api-reference.md  api.md  architecture.md  auth_service-specifications.md  authentication.md  build-system.md  context.md  core-service.md  data-model.md  deployment-guide.md  deployment-secrets_management.md  deployment.md  development-guide.md  dynamodb-structure.md  frontend.md  hosting-service-task.md  hosting-service.md  media-management.md  profile-image-backend-spec.md  profile-management.md  secrets-management.md  system-architecture.md  user-service.md  user_service-user_id_hashing.md
docs/examples/frontend/: auth.js  profile.js
docs/frontend/: media.ts  profile.ts
docs/legacy/: architecture.md  data-model.md
docs/pondering/: media-upload-recommendation.md
scripts/: README-mock-user.md  build.py  create_mock_user.py  debug_jwt.py  deploy.py  deploy.sh  dynamodb_mgmt.py  example_usage.py  manage_secrets.py  requirements-mock-user.txt  secretsmanager_mgmt.py  service.py  terminal-setup.sh  test.py  test_mock_user.py  test_mock_user_simple.py  test_profile_access.py  upload_lambda_zips.py
src/common/aws_lambdas/core/: auth_utils.py  aws.py  dynamo_utils.py  manager.py  media_utils.py  platform.py  profile_utils.py  rest_utils.py  settings.py  user_utils.py
src/common/aws_lambdas/core_types/: media.py  profile.py  user.py
src/config/: __init__.py  core.json  env.example  parameters.json  parameters.yaml
src/config/cloudformation/: parameters.yaml
src/core/: build_utils.py  config_utils.py  core_utils.py  deploy_utils.py  test_utils.py
src/services/agora/: test.py
src/services/agora/cloudformation/: template.yaml
src/services/auth/: IMPLEMENTATION_SUMMARY.md  README.md  build.py  build.sh  deploy.py  deploy.sh  test.py  validate_template.sh
src/services/auth/aws_lambdas/: requirements.json  requirements.txt
src/services/auth/aws_lambdas/auth_jwt_authorizer/: lambda_function.py
src/services/auth/aws_lambdas/auth_platform/: lambda_function.py  telegram.py
src/services/auth/aws_lambdas/core/: auth_utils.py  dynamo_utils.py  rest_utils.py  settings.py
src/services/auth/aws_lambdas/jwt_authorizer/: lambda_function.py
src/services/auth/aws_lambdas/platform_auth/: lambda_function.py  telegram.py
src/services/auth/aws_lambdas/telegram_auth/: lambda_function.py
src/services/auth/aws_lambdas/test/: .gitignore  README.md  test_auth.py  test_functional.py  test_layer.py  test_structure.py
src/services/auth/cloudformation/: 01-apigateway.yaml  01-lambda.yaml  02-apigateway.yaml  02-lambda.yaml  parameters.yaml  template.yaml
src/services/auth/lambda/: lambda_function.py  requirements.txt  test_auth.py
src/services/core/: README.md  build.py  deploy.py  test.py
src/services/core/aws_lambdas/: requirements.json
src/services/core/aws_lambdas/test/: __init__.py  test_functional.py  test_layer.py  test_structure.py
src/services/core/cloudformation/: 01-s3.yaml  02-dynamodb.yaml  03-iam.yaml  04-lambda.yaml
src/services/data/: build.py  deploy.py  test.py
src/services/data/aws_lambdas/data_media_processing/: lambda_function.py
src/services/data/aws_lambdas/test/: test_functional.py  test_structure.py
src/services/data/cloudformation/: 01-lambda.yaml
src/services/hosting/: README.md  build.py  deploy.py  test.py
src/services/hosting/cloudformation/: 01-cloudfront.yaml  01-s3.yaml  02-cloudfront.yaml  02-s3.yaml  03-route53.yaml  04-website.yaml
src/services/media/: README.md  build.py  deploy.py  test.py
src/services/media/aws_lambdas/: requirements.json
src/services/media/aws_lambdas/media_management/: lambda_function.py
src/services/media/aws_lambdas/media_processing/: lambda_function.py
src/services/media/aws_lambdas/media_upload/: lambda_function.py
src/services/media/aws_lambdas/test/: __init__.py  test_functional.py  test_layer.py
src/services/media/cloudformation/: template.yaml
src/services/user/: build.py  deploy.py  test.py
src/services/user/aws_lambdas/: requirements.json  requirements.txt
src/services/user/aws_lambdas/core/: auth_utils.py  profile_utils.py  rest_utils.py  settings.py
src/services/user/aws_lambdas/profiles/: lambda_function.py
src/services/user/aws_lambdas/test/: test_functional.py  test_lambda_functional.py  test_layer.py  test_structure.py
src/services/user/aws_lambdas/user_media_mgmt/: lambda_function.py
src/services/user/aws_lambdas/user_profile_mgmt/: lambda_function.py
src/services/user/cloudformation/: 01-lambda.yaml  01-s3.yaml  02-apigateway.yaml  02-iam.yaml  03-lambda.yaml  04-apigateway.yaml
